--- a/finale.html
+++ b/finale.html
@@ -144,7 +144,7 @@
 			jobList.innerHTML = "";
 			jobs.forEach(function(job) {
 				var li = document.createElement("li");
-				li.innerHTML = "<h2>" + job.title + "</h2><p>" + job.description + "</p><p class='location'>" + job.location + "</p><a href='#'>Apply Now</a>";
+				li.innerHTML = "<h2>" + job.title + "</h2><p>" + job.description + "</p><p class='location'>" + job.location + "</p><a href='file:///C:/Users/Gledis/Desktop/finale.html'>Apply Now</a>";
 				jobList.appendChild(li);
 			});
 		}
